Revert "Update blog.html"
This reverts commit 5252fa34d66d452dbc3a4e158bb93a1f9733e1f7.

--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
         <div class="container">
           <div class="row slider-text align-items-center justify-content-center">
             <div class="col-md-8 text-center col-sm-12 element-animate">
-              <h1>Test Blog</h1>
+              <h1>Blog</h1>
               <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde impedit, necessitatibus, soluta sit quam minima expedita atque corrupti reiciendis.</p>
               <p><a href="#" class="btn btn-white btn-outline-white">Explore</a></p>
             </div>
